--- a/estilos.css
+++ b/estilos.css
@@ -1,22 +1,32 @@
 body{
     margin: 0px;
     font-family: monospace;
+    background-color: black;
 }
 
 .header {
-    background-color: black;
     width: 100%;
-    border-bottom: 3px blue solid;
+    height: 100px;
+    align-items: center;
+    border-bottom: 3px solid #32b9cd ;
 }
 
-h1{
+.titulo {
     margin: 0px;
-    color: aqua;
+    color: #32b9cd;
+    border: 3px solid yellow;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+    display: flex;
 }
 
 .header .container{
-    width: 70%;
-    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .navbar{
@@ -26,4 +36,51 @@ h1{
     justify-content: space-between;
     color: orange;
     display: flex;
+    padding: 0;
+}
+
+p {
+    color: white;
+}
+
+/* Começo do Banner*/
+
+.banner {
+    height: 500px;
+    background-image: url("../projeto-iot-revolucionario-gustavo/Aula_HTML_CSS/imgs/bg-jelly-fish-para-home.png");
+    background-size: cover;
+}
+
+.banner .card {
+    margin: auto;
+    height: 300px;
+    background-color: beige;
+    align-items: center;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.btn {
+    font-family: monospace;
+    margin-top: 10px;
+    border: 0;
+    font-weight: 600;
+    background-color: #e75459;
+    color: white;
+    font-size: 18px;
+    border-radius: 4px;
+    padding: 10px 15px;
+}
+
+.banner .card {
+    color: #e75459;
+}
+
+input {
+    height: 30px;
+    border: 2px solid #e75459;
+    border-radius: 8px;
 }
